--- a/lava-job-template/qemu/qemu.yaml
+++ b/lava-job-template/qemu/qemu.yaml
@@ -1,3 +1,5 @@
+####### RAVA actions test #################
+
 # Your first LAVA JOB definition for an riscv_64 QEMU
 device_type: qemu
 job_name: ${qemu_job_name}
