--- a/lava-testcases/common-test/ltp/ltp.yaml
+++ b/lava-testcases/common-test/ltp/ltp.yaml
@@ -1,3 +1,5 @@
+######################### RAVA actions ############################
+
 metadata:
     name: ltp
     format: "Lava-Test Test Definition 1.0"
