--- a/lava-job-template/qemu/qemu.yaml
+++ b/lava-job-template/qemu/qemu.yaml
@@ -67,3 +67,4 @@ actions:
       name: ${testitem_name}
       path: ${testcase_url}
       repository: ${testcase_repo}
+      revisions: ${testcase_ref}
