--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ on:
 jobs:
   rvck:
     uses: OERV-RVCI/RVCK-pipeline/.github/workflows/rava-actions.yml@actions
-    secrets: inherit
+    secrets:
+      lava_token: ${{ secrets.LAVA_TOKEN }}
     # permissions:
     #   issues: write
     #   pull-requests: write
