--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,9 @@ name: RVCK
 
 on:
   push:
-  pull_request:
+  # pull_request:
+  #   types: [opened, reopened]
+  pull_request_target:
     types: [opened, reopened]
   issues:
     types: [opened, reopened]
