--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
   # pull_request:
   #   types: [opened, reopened]
   pull_request_target:
-    types: [opened, reopened]
+    types: [opened, reopened, synchronize]
   issues:
     types: [opened, reopened]
   issue_comment:
