--- a/lava-testcases/common-test/ltp/ltp.yaml
+++ b/lava-testcases/common-test/ltp/ltp.yaml
@@ -13,7 +13,7 @@ metadata:
       - lpi4a
       - sg2042
 params:
-    TST_CMDFILES: syscalls
+    TST_CMDFILES: syscalls,fs,fs_perms_simple,dio,mm,irq,sched
 run:
     steps:
         - cd lava-testcases/common-test/ltp/
