--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   rvck:
-    uses: OERV-RVCI/RVCK-pipeline/.github/workflows/rava-actions.yml@actions
+    uses: OERV-RVCI/RVCK-RAVA/.github/workflows/rava-actions.yml@main
     secrets:
       lava_token: ${{ secrets.LAVA_TOKEN }}
     permissions:
