--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,17 +1,16 @@
 name: RAVA CI
 
 on:
-  # push:
-  # pull_request_target:
-  #   types: [opened, reopened, synchronize]
-  # issues:
-  #   types: [opened, reopened]
-  # issue_comment:
-  #   types: [created]
+  pull_request_target:
+    types: [opened, reopened, synchronize]
+  issues:
+    types: [opened, reopened]
+  issue_comment:
+    types: [created]
 
 jobs:
-  RAVA:
-    uses: OERV-RVCI/RVCK-RAVA/.github/workflows/rava-actions.yml@main
+  rvck:
+    uses: OERV-RVCI/RVCK-RAVA/.github/workflows/rava-actions.yml@develop/codelint
     secrets:
       lava_token: ${{ secrets.LAVA_TOKEN }}
     permissions:
