--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   rvck:
-    uses: OERV-RVCI/RVCK-RAVA/.github/workflows/rava-actions.yml@develop/codelint
+    uses: OERV-RVCI/RVCK-RAVA/.github/workflows/rava-actions.yml@main
     secrets:
       lava_token: ${{ secrets.LAVA_TOKEN }}
     permissions:
