--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   RAVA:
-    uses: OERV-RVCI/RVCK-RAVA/.github/workflows/rava-actions.yml@main
+    uses: OERV-RVCI/RVCK-RAVA/.github/workflows/rava-actions.yml@lava-add-hardware-support
     secrets:
       lava_token: ${{ secrets.LAVA_TOKEN }}
     permissions:
